--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,24 @@ body {
     margin: 0;
 }
 
+h1,
+h2,
+p {
+    /* 这两个在技术上是一样的, 为了兼容了浏览器两个都加上 */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    /* 这个的使用在web-kit中有些危险，他可能会阶段所有东西 */
+    word-break: break-all;
+    /* Instead use this non-standard one: */
+    word-break: break-word;
+    /* 如果浏览器支持的话增加一个连接符(Blink不支持) */
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
+}
+
 .header-menu {
     border-bottom: none !important;
 }
@@ -15,4 +33,35 @@ body {
 .contact-box .el-dialog__title {
     font-weight: 700;
     font-size: 22px;
+}
+
+.contact-box {
+    text-align: left;
+}
+
+.contact-box .text {
+    font-size: 20px;
+}
+
+.contact-box .text span {
+    font-weight: 700;
+}
+
+@media (max-width: 800px) {
+    .desc {
+        width: 75% !important;
+    }
+    .bottom .content {
+        display: block !important;
+        top: 30% !important;
+    }
+    .bottom .content p {
+        width: 100% !important;
+        font-size: 12px !important;
+        line-height: 50px;
+    }
+    .bottom .content img {
+        width: 60% !important;
+        display: none;
+    }
 }
