--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -61,7 +61,9 @@ p {
         line-height: 50px;
     }
     .bottom .content img {
-        width: 60% !important;
+        display: none;
+    }
+    .bottom .content video {
         display: none;
     }
 }
