--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
 }
 
+.container {
+    padding: 0 !important;
+    width: 100% !important;
+}
+
 h1,
 h2,
 p {
@@ -47,6 +52,26 @@ p {
     font-weight: 700;
 }
 
+.sign-item .el-form-item__label {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.sign-input .el-input__inner {
+    height: 60px;
+    font-size: 24px;
+    line-height: 60px;
+    /* border-radius: 20px; */
+}
+
+.el-main {
+    padding: 0;
+}
+
+.input .el-input__inner {
+    height: 0.6rem;
+}
+
 @media (max-width: 800px) {
     .desc {
         width: 75% !important;
@@ -65,5 +90,8 @@ p {
     }
     .bottom .content video {
         display: none;
+    }
+    .el-menu-item {
+        padding: 0 10px !important;
     }
 }
